--- a/index.css
+++ b/index.css
@@ -307,3 +307,9 @@ article {
     padding: 1em;
     overflow: hidden;
 }
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
