--- a/index.css
+++ b/index.css
@@ -2,6 +2,12 @@ body{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    position: relative;
+    min-height: 100%;
+}
+.container{
+    position: relative;
+    min-height: 100%;
 }
 .logo {
     float: left;
@@ -13,7 +19,8 @@ p.title {
     color: #e7c26a;
     margin: .5em 0 0 1em;
     width: 250px;
-    position: relative;
+    position: absolute;
+    padding-left: 8.5em;
     float:left;
     height: 60px;
     font-size: 22px;
@@ -21,10 +28,10 @@ p.title {
    /* font-weight: bold; 
    border: 1px solid black; */
 }
-section {
+.header {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: auto;
     background: url();
     background-position: center center;
 }
@@ -37,6 +44,19 @@ header {
     box-shadow: 0 5px 15px rgba(0,0,0,.2);
     transition: .5s;
 }
+.main_body{
+    position: relative;
+    padding-bottom: 100%;
+}
+footer{
+    position: relative;
+    bottom: 0;
+    height: 60px;
+    width: 100%;
+    color: white;
+    background: #516982;
+}
+
 ul {
     list-style-type: none;
     position: relative;
@@ -45,10 +65,11 @@ ul {
     display: flex;
     float: right;
     transition: .5s;
+    z-index: 999;
 }
 ul li {
     list-style: none;
-        color: white;
+    color: white;
 }
 .main_nav_bar { /*spaces margin of top and bottom*/
     margin: 20px 0;
@@ -165,3 +186,98 @@ ul li a {
         display: none; /*at 450px remove title */
     }
 }
+
+
+
+/* Slideshow container */
+.item {
+  height: 38em;
+  overflow: hidden;
+}
+/*img.resize{
+  max-width:100%;
+}*/
+.slideshow-container {
+  width: 70%;
+  height: 40em;
+  position: absolute;
+  margin: 0% 1% 0% 2%;
+  float: left;
+}
+/* Hide the images by default */
+.mySlides {
+    display: none;
+    overflow: hidden;
+}
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  margin-top: 5px;
+  padding: 15px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+/* Caption text 
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}*/
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 13px;
+  width: 13px;
+  margin: 6px 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+  position: relative;
+}
+.active, .dot:hover {
+  background-color: #717171;
+}
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+
+
+
+
