--- a/index.css
+++ b/index.css
@@ -158,7 +158,7 @@ ul li a {
 
 @media (max-width: 1260px){
     ul#navigation_bar.main_nav_bar.active { /*changed screen minimiztation margin for menu*/
-        margin: -4px 0 0 0;
+        margin-top: 5em; /*distance from header*/
     }
     p.title {
         width: 200px;
@@ -186,7 +186,7 @@ ul li a {
         display: block;
         text-align: center;
         color: #ffff;
-        background: rgba(0,0,0,.7);
+        background: rgba(0,0,0,.5);
 
     }
 }
