--- a/index.css
+++ b/index.css
@@ -60,7 +60,7 @@ header {
 footer{
     position: relative;
     bottom: 0;
-    height: 60px;
+    height: 10%;
     width: 100%;
     color: white;
     background: #516982;
