--- a/css_files/index.css
+++ b/css_files/index.css
@@ -9,7 +9,7 @@ body{
     background-color: white;
 }
 
-#container{     /* CONTAINS ALL OF BODY'S TAGS */
+#container {     /* CONTAINS ALL OF BODY'S TAGS */
     position: relative;
     min-height: 100%;
     height: 100%;
@@ -53,19 +53,19 @@ footer table tr td {
     text-align: center
 }
 
-.logo {
+section#header {
+    position: fixed;
+    width: 100%;
+    height: 80px;
+    background-position: center center;
+    z-index: 2;
+}
+
+img.logo {
+    width: 200px;
     float: left;
     position: absolute;
     z-index: 1; /*bring image logo to the front*/
-}
-
-#header {
-    position: fixed;
-    width: 100%;
-    height: auto;
-    background: url();
-    background-position: center center;
-    z-index: 2;
 }
 
 h1 { /*fix overflow in opera*/
@@ -83,10 +83,6 @@ p.title {
     font-size: 22px;
     overflow: hidden;
     
-}
-div.text {
-    background-color: white;
-
 }
 .text {
     background-color: white;
@@ -192,20 +188,44 @@ ul li a {
     /*color: white*/
 }
 
+/********************************* HAMBURGER BUTTON ********************************/
 .toggle {
     display: none;
     position: absolute;
     right: 10px;
     top: 26px;
-    color: #fff;
+    color: #ffff;
     padding: 5px;
     cursor: pointer;
     font-weight: bold;
 }
 
+.hamburger-box, .hamburger {
+    top: -1em;
+    opacity: .75;
+}
+.hamburger-box:hover, hamburger-box:active {
+    opacity: .75;
+    animation: fade 2s linear backwards;
+    animation-iteration-count: 1;
+}
+
+@keyframes fade {
+    0%{ opacity: .75;}
+    100%{ opacity: 1;}
+}
+
+button.hamburger {
+    outline: none;
+}
+
+.calendar {
+    padding-top: 1em;
+}
+
 /************* STRUCTURES NAV BAR WHEN UNDER SPECIFIC WIDTH ***********************/
 
-@media (max-width: 1260px){
+@media (max-width: 1250px){
     ul#navigation_bar.main_nav_bar { /*changed screen minimiztation margin for menu*/
         margin-top: 5em; /*distance from header*/
     }
