--- a/css_files/index.css
+++ b/css_files/index.css
@@ -61,11 +61,12 @@ section#header {
     z-index: 2;
 }
 
-img.logo {
+img#logo {
     width: 200px;
     float: left;
     position: absolute;
     z-index: 1; /*bring image logo to the front*/
+    transition: .32s linear;
 }
 
 h1 { /*fix overflow in opera*/
@@ -82,6 +83,7 @@ p.title {
     height: 60px;
     font-size: 22px;
     overflow: hidden;
+    transition: .30s linear;   
     
 }
 .text {
@@ -99,7 +101,7 @@ p.text {
 hr {
     border: 0;
     height: 2px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(250, 250, 250, 249.75), rgba(0, 0, 0, 0));
+    background-image: linear-gradient(to right, rgba(100, 100, 0, 0), rgba(250, 250, 250, 249.75), rgba(100, 100, 0, 0));
 }
 
 
@@ -114,6 +116,7 @@ ul {
     float: right;
     transition: .5s;
     z-index: 5;
+    
 }
 
 ul li {
@@ -184,11 +187,6 @@ ul li a:hover + .drop-menu, .drop-menu:hover {
     z-index: 100;
 }
 
-ul li a {
-    /*color: white*/
-}
-
-/********************************* HAMBURGER BUTTON ********************************/
 .toggle {
     display: none;
     position: absolute;
@@ -198,6 +196,10 @@ ul li a {
     padding: 5px;
     cursor: pointer;
     font-weight: bold;
+}
+
+.calendar {
+    padding-top: 1em;
 }
 
 .hamburger-box, .hamburger {
@@ -217,10 +219,6 @@ ul li a {
 
 button.hamburger {
     outline: none;
-}
-
-.calendar {
-    padding-top: 1em;
 }
 
 /************* STRUCTURES NAV BAR WHEN UNDER SPECIFIC WIDTH ***********************/
@@ -273,7 +271,7 @@ button.hamburger {
         overflow-x: hidden;
     }
     .calendar {
-        max-height: 30em;
+        max-height: 35em;
     }
 }
 
