--- a/hamburgers-master/_sass/hamburgers/hamburgers.scss
+++ b/hamburgers-master/_sass/hamburgers/hamburgers.scss
@@ -14,7 +14,7 @@ $hamburger-padding-y                       : 15px !default;
 $hamburger-layer-width                     : 30px !default;
 $hamburger-layer-height                    : 4px !default;
 $hamburger-layer-spacing                   : 6px !default;
-$hamburger-layer-color                     : #FFF !default;
+$hamburger-layer-color                     : #000 !default;
 $hamburger-layer-border-radius             : 4px !default;
 $hamburger-hover-opacity                   : 0.7 !default;
 $hamburger-hover-transition-duration       : 0.15s !default;
