--- a/css_files/index.css
+++ b/css_files/index.css
@@ -19,7 +19,7 @@ body {
 }
 
 header {
-    padding: 0 100px;
+    padding: 0 75px;
     width: 100%;
     height: 80px;
     box-sizing: border-box;
@@ -63,12 +63,25 @@ section#header {
     z-index: 2;
 }
 
+@keyframes fade_in {
+    0% {
+        opacity: 0;
+        transform: translate(-10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0px);
+    }
+}
+
+
 img#logo {
     width: 200px;
     float: left;
     position: absolute;
     z-index: 1; /*bring image logo to the front*/
-    transition: .32s linear;
+    animation: fade_in .5s ease-in .3s backwards;
+    transition: .35s linear;
 }
 
 h1 { /*fix overflow in opera*/
@@ -77,21 +90,26 @@ h1 { /*fix overflow in opera*/
 
 p.title {
     color: #e7c26a;
-    margin: .7em 0 0 1em;
+    margin: 1em 0 0 2em;
     width: 50%;
     position: absolute;
     padding-left: 8.5em;
     float:left;
     height: 60px;
-    font-size: 22px;
+    font-size: 1.3em;
     overflow: hidden;
-    transition: .30s linear;   
+    animation: fade_in .5s ease-in .3s backwards;
+    transition: .4s ease-in;
+
     
 }
+
 .text {
     background-color: white;
     padding: 0 .5em 1em .5em;
     margin: 0;
+    transition: .30s linear;   
+
 }
 
 p.text {
@@ -230,16 +248,17 @@ button.hamburger {
 @media (max-width: 1250px){
     ul#navigation_bar { /*changed screen minimiztation margin for menu*/
         margin-top: 5em; /*distance from header*/
+
     }
     
     p.title {
         width: 50%;
-        font-size: 1.2em; 
-        margin: 1em 0 0 2em ;
-
+        margin: 1em 0 1em 2em ;
+        transition: .4s linear;
     }
     .toggle {
         display: block;
+
     }
     header {
         padding: 0 0;
@@ -264,7 +283,7 @@ button.hamburger {
 
     }
     .slide_images img{
-    display: none;
+        display: none;
     }
     a.next, a.prev { 
         display: none;
